--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -30,6 +30,13 @@
 				<input type='password' name='password'><br>
 			</div>
 			<div class="form-group">
+				<label>Do you have a driving license?</label><br>
+                <select name="driver_status" title="Please select">
+                    <option>No</option>
+                    <option>Yes</option>
+                </select>
+			</div>
+			<div class="form-group">
 				<button type="submit" name="submit" class="btn btn-default" value="register">Register</button>
 			</div>
 
