adjust session.pop

--- a/app/templates/feedback.html
+++ b/app/templates/feedback.html
@@ -43,7 +43,7 @@
     <body>
 	<div>
 		<h2 style="text-align: center; font-family: sans-serif">
-			How have you affected our model's estimates?
+			How have you affected the estimates of demand?
 		</h2>
 		<h4 style="text-align: center; font-family: sans-serif">
 			Each dot represents an estimate you influenced, hover over a dot to watch the video
