--- a/app/templates/comparisons.html
+++ b/app/templates/comparisons.html
@@ -41,7 +41,7 @@
 			<div class='text-center'>
 				<div class='form-group'>
 					<FORM method="POST">
-                        <button type="submit" id='btn1' title="You haven't watched the videos!" name="choice" value="Video 1" class="btn btn-success" disabled>Video 1</button>
+                        <button type="submit" id='btn1' title="Watch both videos" name="choice" value="Video 1" class="btn btn-success" disabled>Video 1</button>
 					</FORM>
 				</div>
 			</div>
@@ -50,7 +50,7 @@
 			<div class='text-center'>
 				<div class='form-group'>
 					<FORM method="POST">
-						<button type="submit" id='btn2' title="You haven't watched the videos!" name="choice" value="Video 2" class="btn btn-success" disabled>Video 2</button>
+						<button type="submit" id='btn2' title="Watch both videos" name="choice" value="Video 2" class="btn btn-success" disabled>Video 2</button>
 					</FORM>
 				</div>
 			</div>
