--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -7,20 +7,20 @@
 
 <div class="container">
 
+    <!--
       <div class="page-header">
-        <h1>Register</h1><br>
+        <h1>Register + Login</h1><br>
 		<p>Enter your details below</p>
       </div>
-	
+    -->
 	
   <div class="row">
         <!-- <div class="col-xs-4">One third</div> -->
-        <div class="col-xs-12">
+        <div class="col-xs-8">
+            <h1> Register + Login </h1>
+            <p>Enter your details below:</p>
 
 			<form method='POST'>
-			<div class="form-group">
-				<button type="submit" name="submit" class="btn btn-success" value="already_registered">Already Registered</button>
-			</div>
 			<div class="form-group">
 				<label>Username</label><br>
 				<input type='text' name='username'><br>
@@ -37,12 +37,32 @@
                 </select>
 			</div>
 			<div class="form-group">
-				<button type="submit" name="submit" class="btn btn-default" value="register">Register</button>
+                <button type="submit" name="submit" class="btn btn-success" value="register">Register and Login</button>
+                <!-- <button type="submit" name="submit" class="btn btn-success" value="login">Login</button> -->
 			</div>
-
 			</form>
 		</div>
         <!-- <div class="col-xs-4">One third</div> -->
+        <div class="col-xs-4 pull-right">
+
+            <h1>Login</h1>
+            <p>If you've registered previously:</p>
+
+			<form method='POST'>
+			<div class="form-group">
+				<label>Username</label><br>
+				<input type='text' name='username'><br>
+			</div>
+			<div class="form-group">
+				<label>Password</label><br>
+				<input type='password' name='password'><br>
+			</div>
+			<div class="form-group">
+                <!-- <button type="submit" name="submit" class="btn btn-primary" value="register">Register and Login</button> -->
+				<button type="submit" name="submit" class="btn btn-success" value="login">Login</button>
+			</div>
+			</form>
+		</div>
    </div> 
 
 {% endblock %}
