--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -7,18 +7,12 @@
 
 <div class="container">
 
-    <!--
-      <div class="page-header">
-        <h1>Register + Login</h1><br>
-		<p>Enter your details below</p>
-      </div>
-    -->
-	
   <div class="row">
-        <!-- <div class="col-xs-4">One third</div> -->
+        <!-- register column -->
         <div class="col-xs-8">
-            <h1> Register + Login </h1>
+            <h1> Register</h1>
             <p>Enter your details below:</p>
+            <hr>
 
 			<form method='POST'>
 			<div class="form-group">
@@ -42,11 +36,13 @@
 			</div>
 			</form>
 		</div>
-        <!-- <div class="col-xs-4">One third</div> -->
+
+        <!-- Just login column -->
         <div class="col-xs-4 pull-right">
 
             <h1>Login</h1>
             <p>If you've registered previously:</p>
+            <hr>
 
 			<form method='POST'>
 			<div class="form-group">
