--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -26,8 +26,9 @@
 			<div class="form-group">
 				<label>Do you have a driving license?</label><br>
                 <select name="driver_status" title="Please select">
-                    <option>No</option>
+                    <option value="" selected>Please select</option>
                     <option>Yes</option>
+                    <option>No</option>
                 </select>
 			</div>
 			<div class="form-group">
