--- a/app/templates/instructions.html
+++ b/app/templates/instructions.html
@@ -38,9 +38,7 @@
                 <h3>Your Task</h3>
            <br>
            </div>
-           <h4>We'll be asking what kind of driving situations you find demanding. You'll be presented with two short video clips, around two seconds long, taken from a driver's point-of-view driving in a city. We want you to watch both videos and select which situation you'd find more demanding as a driver, Video 1 or Video 2, by clicking the button under that video. To help with this please put yourself in the mindset of the driver as you watch the videos!
-                <br><br>
-           After you have selected a video, a new pair of videos will be presented for you to watch. Keep watching and voting for the most demanding video as long as you feel comfortable - if you start to feel fatigued and can't concentrate fully on the task, take a break and come back another time. The more selections you make, the more we can learn about the science of driving.
+		   <h4>You'll be presented with two short video clips (~2 sec long) of city driving taken from a driver's point-of-view. Watch both videos, putting yourself in the mindset of the driver and assume that it is a route you know and have driven many times. As you are viewing the scene, decide which situation you'd find <i>more demanding</i> on your attention to maintain safe driving. After watching the videos, select Video 1 or Video 2, by clicking the button below that video. After you've selected a video, a new pair of videos will be presented for you to watch and compare.
            <br><br>
            To get a feel for the task, do some example comparisons by pressing the button below. You can only select the more demanding video once you've watched both videos on the page. Once you feel comfortable with the task, continue onto the proper experiment. </h4>
            </div>
